--- a/src/app/style/base.scss
+++ b/src/app/style/base.scss
@@ -9,12 +9,72 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     color: $text-color;
+    background-image: url('./images/background5.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .container {
     padding: 25px calc((100vw - 960px) / 2);
-
+    
+    
     @media (max-width: 980px) {
         padding: 25px 10px;
     }
+}
+
+.apps {
+    max-height: 70vh;
+    overflow-y: scroll;
+}
+
+.centered {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+}
+
+li {
+    list-style-type: none;
+   }
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.appBox {
+    background-color: rgba($color: #ffffff, $alpha: 0.4);
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 7px;
+    color: white;
+    padding: 10px;
+    
+
+}
+
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 90%;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.7); 
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #ececec; 
 }
