--- a/src/app/style/index.scss
+++ b/src/app/style/index.scss
@@ -1,6 +1,6 @@
 $primary-color: #63adf2;
 $secondary-color: #ff686b;
-$text-color: #333;
+$text-color: rgb(255, 255, 255);
 $grey: rgb(200, 200, 200);
 
 @import './base.scss';
