--- a/src/app/style/base.scss
+++ b/src/app/style/base.scss
@@ -28,11 +28,46 @@ body {
     overflow-y: scroll;
 }
 
+.login {
+    padding: 10px;
+    padding-left: 0px;
+    display: flex;
+    flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.headingline {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+button {
+    width: 100px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: white;
+    font-display: black;
+    font-size: 12pt;
+
+}
+
+.backbutton {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .centered {
 display: flex;
 justify-content: center;
 align-items: center;
 height: 100vh;
+}
+
+ul {
+    padding-left: 0px;
 }
 
 li {
@@ -47,7 +82,6 @@ a {
 .appBox {
     background-color: rgba($color: #ffffff, $alpha: 0.4);
     margin-bottom: 10px;
-    margin-left: 10px;
     margin-right: 10px;
     border-radius: 7px;
     color: white;
